--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,14 +2,15 @@ cmake_minimum_required(VERSION 3.10)
 
 project(test)
 include_directories(${CMAKE_SOURCE_DIR}/include)
+set(CMAKE_CXX_FLAGS "-g -O0")
 
 if(EMSCRIPTEN)
 	set(CMAKE_CXX_FLAGS
 		"${CMAKE_CXX_FLAGS} \
 		-Wno-unused-command-line-argument \
-		-s WASM=1 \
 		-s USE_WEBGPU=1 \
 		-s USE_SDL=2 \
+		-s ASYNCIFY=1 \
 		-std=c++20")
 	add_executable(test test.cpp)
 	target_link_libraries(test PRIVATE paranoixa)
