--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.10)
 
 project(test)
 include_directories(${CMAKE_SOURCE_DIR}/include)
+if(NOT MSVC)
 set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2")
+endif()
 
 if(EMSCRIPTEN)
 	set(CMAKE_CXX_FLAGS
