--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "library/imgui"]
 	path = library/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "library/WebGPU-distribution"]
+	path = library/WebGPU-distribution
+	url = https://github.com/eliemichel/WebGPU-distribution
