--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "library/dawn"]
 	path = library/dawn
 	url = https://dawn.googlesource.com/dawn
+[submodule "library/VulkanMemoryAllocator"]
+	path = library/VulkanMemoryAllocator
+	url = https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator
+[submodule "library/volk"]
+	path = library/volk
+	url = https://github.com/zeux/volk
