--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -50,6 +50,6 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4.2.2
       with:
         branch: gh-pages
-        folder: 'web'
+        folder: 'test'
         ssh-key: ${{ secrets.DEPLOY_KEY }}
         target-folder: test
