--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: web
-        path: build/test
+        name: build
+        path: build
   deploy:
     concurrency: ci-${{ github.ref }}
     needs: [build] # The second job must depend on the first one to complete before running and uses ubuntu-latest instead of windows.
@@ -45,11 +45,11 @@ jobs:
     - name: Download Artifacts
       uses: actions/download-artifact@v4
       with:
-        name: web
+        name: build
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4.2.2
       with:
         branch: gh-pages
-        folder: 'test'
+        folder: 'build'
         ssh-key: ${{ secrets.DEPLOY_KEY }}
-        target-folder: test
+        target-folder: build
