--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "library/volk"]
 	path = library/volk
 	url = https://github.com/zeux/volk
+[submodule "library/WebGPU-distribution"]
+	path = library/WebGPU-distribution
+	url = https://github.com/eliemichel/WebGPU-distribution
