--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "library/volk"]
 	path = library/volk
 	url = https://github.com/zeux/volk
+[submodule "library/imnodes"]
+	path = library/imnodes
+	url = https://github.com/Nelarius/imnodes
