--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,12 @@ cmake_minimum_required(VERSION 3.20)
 
 project(test)
 set(CMAKE_CXX_STANDARD 23)
-include_directories(${CMAKE_SOURCE_DIR}/include)
+include_directories(
+${CMAKE_SOURCE_DIR}/include
+${CMAKE_SOURCE_DIR}/library/SDL/include
+${CMAKE_SOURCE_DIR}/library/imgui
+${CMAKE_SOURCE_DIR}/library/imnodes
+)
 
 if(NOT MSVC)
 	set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
