--- a/.gitignore
+++ b/.gitignore
@@ -340,6 +340,9 @@ ASALocalRun/
 healthchecksdb
 
 # build
-[Bb]uild/
 [Ww]eb/
 *.dll
+build/msvc/*
+!build/msvc/.gitkeep
+build/clang/*
+!build/clang/.gitkeep
