--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -25,19 +25,19 @@ jobs:
     - name: CMake
       run: |
         git submodule update --init library/imgui library/imnodes library/SDL library/tlsf library/volk library/VulkanMemoryAllocator
-        mkdir build
-        emcmake cmake -B build
+        mkdir build/emscripten
+        emcmake cmake -B build/emscripten
     - name: Build
       run: |
-        cp -r ${{github.workspace}}/test/res ${{github.workspace}}/build/test
-        cd ${{github.workspace}}/build
+        cp -r ${{github.workspace}}/test/res ${{github.workspace}}/build/emscripten/test
+        cd ${{github.workspace}}/build/emscripten
         make -j2
         cd ${{github.workspace}}
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: web
-        path: build/test
+        path: build/emscripten/test
   deploy:
     concurrency: ci-${{ github.ref }}
     needs: [build] # The second job must depend on the first one to complete before running and uses ubuntu-latest instead of windows.
