Add imgui backend library to paranoixa_test target in CMakeLists.txt

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,7 +24,7 @@ if(EMSCRIPTEN)
 		-s ASYNCIFY=1 \
 		--preload-file res")
 	add_executable(paranoixa_test test.cpp)
-	target_link_libraries(paranoixa_test PRIVATE paranoixa)
+	target_link_libraries(paranoixa_test PRIVATE paranoixa paranoixa_imgui_backend)
 	set(CMAKE_EXECUTABLE_SUFFIX ".html")
 endif()
 
