CMakeLists.txt: Add option to conditionally build SDL3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,16 @@ project(paranoixa)
 add_subdirectory(source/phonon)
 add_subdirectory(source/imgui_backend)
 add_subdirectory(test)
-set(CMAKE_FOLDER "SDL3")
-set(SDL_SHARED OFF)
-set(SDL_STATIC ON)
-add_subdirectory(library/SDL EXCLUDE_FROM_ALL)
-unset(CMAKE_FOLDER)
+
+option(PARANOIXA_BUILD_SDL3 "Build SDL3" ON)
+
+if(PARANOIXA_BUILD_SDL3)
+  set(CMAKE_FOLDER "SDL3")
+  set(SDL_SHARED OFF)
+  set(SDL_STATIC ON)
+  add_subdirectory(library/SDL EXCLUDE_FROM_ALL)
+  unset(CMAKE_FOLDER)
+endif()
 
 if(NOT MSVC)
   set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -D_DEBUG")
